--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,28 @@
-{}
+{
+    // #每次保存的时候将代码按eslint格式进行修复
+    // "editor.codeActionsOnSave": {
+    //     "source.fixAll.eslint": true
+    // },
+    // vscode默认启用了根据文件类型自动设置tabsize的选项
+    "editor.detectIndentation": false,
+    // 重新设定tabsize
+    "editor.tabSize": 4,
+    // #每次保存的时候自动格式化
+    "editor.formatOnSave": true,
+    //  #让prettier使用eslint的代码格式进行校验
+    // "prettier.eslintIntegration": true,
+    //  #去掉代码结尾的分号
+    "prettier.semi": false,
+    //  #使用单引号替代双引号
+    "prettier.singleQuote": true,
+    //  #让函数(名)和后面的括号之间加个空格
+    "javascript.format.insertSpaceBeforeFunctionParenthesis": true,
+
+    "eslint.enable": false,
+    "eslint.format.enable": true,
+    "volar-api.trace.server": "messages",
+    "volar-document.trace.server": "messages",
+    "volar-html.trace.server": "messages",
+    "volar.codeLens.scriptSetupTools": true,
+    "vetur.validation.script": false
+}
