--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "nuxi dev",
-    "build": "nuxi build",
-    "start": "node .output/server/index.mjs",
-    "lint:lint-staged": "lint-staged -c ./.husky/lintstagedrc.js"
-  },
-  "devDependencies": {
-    "nuxt3": "latest",
-    "prettier": "^2.5.1"
-  }
+    "private": true,
+    "scripts": {
+        "dev": "nuxi dev",
+        "build": "nuxi build",
+        "start": "node .output/server/index.mjs"
+    },
+    "devDependencies": {
+        "autoprefixer": "^10.4.2",
+        "nuxt3": "latest",
+        "postcss": "^8.4.7",
+        "prettier": "^2.5.1",
+        "tailwindcss": "^3.0.23"
+    }
 }
