--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
     "scripts": {
         "dev": "nuxi dev",
         "build": "nuxi build",
+        "preview": "nuxi preview",
         "start": "node .output/server/index.mjs"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.2",
+        "less": "^4.1.1",
+        "less-loader": "^10.0.1",
         "nuxt3": "latest",
         "postcss": "^8.4.7",
         "prettier": "^2.5.1",
-        "tailwindcss": "^3.0.23"
+        "tailwindcss": "^3.0.23",
+        "unplugin-vue-components": "^0.17.21"
+    },
+    "dependencies": {
+        "ant-design-vue": "^3.0.0-alpha.16"
     }
 }
