--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "dependencies": {
         "ant-design-vue": "^3.0.0-alpha.16",
-        "axios": "^0.26.0"
+        "axios": "^0.26.0",
+        "vue3-i18n": "^1.1.5"
     }
 }
