--- a/package.json
+++ b/package.json
@@ -1,24 +1,15 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "nuxi dev",
-        "build": "nuxi build",
-        "preview": "nuxi preview",
-        "start": "node .output/server/index.mjs"
-    },
-    "devDependencies": {
-        "autoprefixer": "^10.4.2",
-        "less": "^4.1.1",
-        "less-loader": "^10.0.1",
-        "nuxt3": "latest",
-        "postcss": "^8.4.7",
-        "prettier": "^2.5.1",
-        "tailwindcss": "^3.0.23",
-        "unplugin-vue-components": "^0.17.21"
-    },
-    "dependencies": {
-        "ant-design-vue": "^3.0.0-alpha.16",
-        "axios": "^0.26.0",
-        "vue3-i18n": "^1.1.5"
-    }
+  "name": "nuxt-app",
+  "private": true,
+  "scripts": {
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
+  },
+  "devDependencies": {
+    "@types/node": "^18",
+    "nuxt": "^3.5.1"
+  }
 }
