--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
-  "name": "nuxt-app",
-  "private": true,
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
-  },
-  "devDependencies": {
-    "@types/node": "^18",
-    "nuxt": "^3.5.1"
-  }
+    "name": "nuxt-app",
+    "private": true,
+    "scripts": {
+        "build": "nuxt build",
+        "dev": "nuxt dev",
+        "generate": "nuxt generate",
+        "preview": "nuxt preview",
+        "postinstall": "nuxt prepare"
+    },
+    "devDependencies": {
+        "@nuxtjs/color-mode": "^3.2.0",
+        "@nuxtjs/i18n": "^8.0.0-beta.13",
+        "@nuxtjs/tailwindcss": "^6.7.2",
+        "@types/node": "^18",
+        "nuxt": "^3.5.2",
+        "postcss-color-gray": "5.0.0"
+    },
+    "keywords": [
+        "tailwindcss",
+        "nuxtjs",
+        "nuxt"
+    ]
 }
