--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@nuxtjs/color-mode": "^3.2.0",
         "@nuxtjs/i18n": "^8.0.0-beta.13",
         "@nuxtjs/tailwindcss": "^6.7.2",
+        "nuxt-icons": "^3.2.1",
         "@types/node": "^18",
         "nuxt": "^3.5.2",
         "postcss-color-gray": "5.0.0"
@@ -20,5 +21,6 @@
         "tailwindcss",
         "nuxtjs",
         "nuxt"
-    ]
+    ],
+    "dependencies": {}
 }
