--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
         "@nuxtjs/color-mode": "^3.2.0",
         "@nuxtjs/i18n": "^8.0.0-beta.13",
         "@nuxtjs/tailwindcss": "^6.7.2",
-        "nuxt-icons": "^3.2.1",
         "@types/node": "^18",
         "nuxt": "^3.5.2",
+        "nuxt-icons": "^3.2.1",
         "postcss-color-gray": "5.0.0"
     },
     "keywords": [
@@ -22,5 +22,8 @@
         "nuxtjs",
         "nuxt"
     ],
-    "dependencies": {}
+    "dependencies": {
+        "@pinia/nuxt": "^0.4.11",
+        "pinia": "^2.1.4"
+    }
 }
