--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
         "generate": "nuxt generate",
         "preview": "nuxt preview",
         "postinstall": "nuxt prepare",
-        "lint:js": "eslint --ext \".js,.vue\" --ignore-path .npmignore .",
-        "lint:style": "stylelint \"**/*.{css,scss,sass,html,vue,less}\" --ignore-path .npmignore .stylelintignore",
-        "lint:prettier": "prettier --ignore-path .npmignore --check .",
+        "lint:js": "eslint --ext \".js,.vue\" --ignore-path .eslintrcignore .",
+        "lint:style": "stylelint \"**/*.{css,scss,sass,html,vue,less}\" --ignore-path .npmignore",
+        "lint:prettier": "prettier --ignore-path .prettierrcignore --check .",
         "lint": "yarn lint:js && yarn lint:style && yarn lint:prettier",
         "lintfix": "prettier --write --list-different . --ignore-path .npmignore && yarn lint:js --fix && yarn lint:style --fix"
     },
@@ -20,12 +20,17 @@
         "@nuxtjs/color-mode": "^3.2.0",
         "@nuxtjs/eslint-module": "^4.1.0",
         "@nuxtjs/i18n": "^8.0.0-beta.13",
+        "@nuxtjs/stylelint-module": "^5.1.0",
         "@nuxtjs/tailwindcss": "^6.7.2",
         "@types/node": "^18",
         "eslint": "^8.45.0",
         "nuxt": "^3.5.2",
         "nuxt-icons": "^3.2.1",
-        "postcss-color-gray": "5.0.0"
+        "postcss-color-gray": "5.0.0",
+        "postcss-html": "^1.5.0",
+        "prettier": "^3.0.0",
+        "stylelint": "^15.10.2",
+        "stylelint-config-standard-vue": "^1.0.0"
     },
     "keywords": [
         "tailwindcss",
@@ -33,8 +38,8 @@
         "nuxt"
     ],
     "dependencies": {
-        "element-plus": "^2.3.8",
         "@pinia/nuxt": "^0.4.11",
+        "element-plus": "^2.3.8",
         "pinia": "^2.1.4"
     }
 }
