--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
         "lintfix": "prettier --write --list-different . --ignore-path .eslintignore && yarn lint:js --fix && yarn lint:style --fix"
     },
     "devDependencies": {
-        "@babel/eslint-parser": "^7.22.9",
         "@element-plus/nuxt": "^1.0.5",
+        "@nuxt/devtools": "^0.7.1",
         "@nuxt/eslint-config": "^0.1.1",
         "@nuxtjs/color-mode": "^3.2.0",
         "@nuxtjs/eslint-module": "^4.1.0",
@@ -24,7 +24,7 @@
         "@nuxtjs/tailwindcss": "^6.7.2",
         "@types/node": "^18",
         "eslint": "^8.45.0",
-        "nuxt": "^3.5.2",
+        "nuxt": "^3.6.5",
         "nuxt-icons": "^3.2.1",
         "postcss-color-gray": "5.0.0",
         "postcss-html": "^1.5.0",
