feat(): 增加数据请求方式及用户登录校验

--- a/.env.development
+++ b/.env.development
@@ -2,7 +2,7 @@
  # @Author: fyfe0203 freeser@live.cn
  # @Date: 2023-07-27 11:10:00
  # @LastEditors: fyfe0203 freeser@live.cn
- # @LastEditTime: 2023-07-27 11:11:35
+ # @LastEditTime: 2023-07-27 17:52:31
  # @Description: 
  # @FilePath: /nuxt3-demo/.env.development
 ### 
@@ -12,4 +12,4 @@ VITE_APP_ENV=development
 # http://124.70.79.129:7098
 # http://192.168.1.28:13005
 # http://san-front.nmedia.space
-VITE_APP_BASE_URL=http://124.70.79.129:7098
+VITE_APP_BASE_URL=http://124.70.79.129:7098/front-api
