--- a/.env.production
+++ b/.env.production
@@ -2,14 +2,14 @@
  # @Author: fyfe0203 freeser@live.cn
  # @Date: 2023-07-27 11:10:00
  # @LastEditors: fyfe0203 freeser@live.cn
- # @LastEditTime: 2023-07-27 11:11:57
+ # @LastEditTime: 2023-07-27 17:52:35
  # @Description: 
  # @FilePath: /nuxt3-demo/.env.production
 ### 
 VITE_APP_ENV=production
 
 # 生产环境baseUrl
-VITE_APP_BASE_URL=http://san-front.nmedia.space
+VITE_APP_BASE_URL=http://san-front.nmedia.space/front-api
 
 # 是否在打包时开启压缩，支持 gzip 和 brotli
 VITE_BUILD_COMPRESS=gzip
