--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "devDependencies": {
         "@element-plus/nuxt": "^1.0.5",
         "@nuxt/devtools": "^0.7.1",
-        "@nuxt/eslint-config": "^0.1.1",
         "@nuxtjs/color-mode": "^3.2.0",
+        "@nuxtjs/eslint-config-typescript": "^12.0.0",
         "@nuxtjs/eslint-module": "^4.1.0",
         "@nuxtjs/i18n": "^8.0.0-beta.13",
         "@nuxtjs/stylelint-module": "^5.1.0",
@@ -25,13 +25,17 @@
         "@types/node": "^18",
         "@types/qs": "^6.9.7",
         "eslint": "^8.45.0",
+        "eslint-plugin-vue": "^9.16.1",
         "nuxt": "^3.6.5",
         "nuxt-icons": "^3.2.1",
         "postcss-color-gray": "5.0.0",
         "postcss-html": "^1.5.0",
         "prettier": "^3.0.0",
         "stylelint": "^15.10.2",
-        "stylelint-config-standard-vue": "^1.0.0"
+        "stylelint-config-standard-vue": "^1.0.0",
+        "unplugin-auto-import": "^0.16.6",
+        "unplugin-icons": "^0.16.5",
+        "unplugin-vue-components": "^0.25.1"
     },
     "keywords": [
         "tailwindcss",
