fix: 🧩 修复stylelint及lint-staged问题

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -15,5 +15,6 @@
     "proseWrap": "never",
     "htmlWhitespaceSensitivity": "ignore",
     "endOfLine": "auto",
-    "rangeStart": 0
+    "rangeStart": 0,
+    "ignorePath": ".prettierignore"
 }
