--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
         "lint:lint-staged": "lint-staged"
     },
     "devDependencies": {
+        "@ant-design-vue/nuxt": "^1.1.0",
         "@commitlint/cli": "^17.6.7",
         "@commitlint/config-conventional": "^17.6.7",
-        "@element-plus/nuxt": "^1.0.5",
         "@nuxt/devtools": "^0.7.1",
         "@nuxtjs/color-mode": "^3.2.0",
         "@nuxtjs/eslint-config-typescript": "^12.0.0",
@@ -58,7 +58,6 @@
     "dependencies": {
         "@metamask/detect-provider": "^2.0.0",
         "@pinia/nuxt": "^0.4.11",
-        "element-plus": "^2.3.8",
         "pinia": "^2.1.4",
         "qs": "^6.11.2",
         "web3": "^1.10.0"
