feat: 🚀 增加跨域处理及自动刷新

--- a/.env.development
+++ b/.env.development
@@ -2,14 +2,10 @@
  # @Author: fyfe0203 freeser@live.cn
  # @Date: 2023-07-27 11:10:00
  # @LastEditors: fyfe0203 freeser@live.cn
- # @LastEditTime: 2023-07-27 17:52:31
+ # @LastEditTime: 2023-08-16 18:43:12
  # @Description: 
  # @FilePath: /nuxt3-demo/.env.development
 ### 
-VITE_APP_ENV=development
 
-# 开发环境baseUrl
-# http://124.70.79.129:7098
-# http://192.168.1.28:13005
-# http://san-front.nmedia.space
-VITE_APP_BASE_URL=http://124.70.79.129:7098/front-api
+# 开发环境baseUrl // http://43.135.12.192:13100
+NUXT_PUBLIC_BASE_URL=/front-api
