--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
     "private": true,
     "scripts": {
         "cz": "czg",
-        "build": "nuxt build",
-        "dev": "nuxt dev",
+        "build": "nuxt build --dotenv .env.production",
+        "test": "nuxt build --dotenv .env.test",
+        "dev": "nuxt dev --dotenv .env.development -p 3300",
         "generate": "nuxt generate",
         "preview": "nuxt preview",
         "postinstall": "nuxt prepare",
         "prepare": "husky install",
-        "lint:js": "eslint --ext \".js,.vue\" --ignore-path .eslintignore .",
-        "lint:style": "stylelint \"**/*.{css,scss,sass,html,vue,less,postcss,pcss}\" --ignore-path .stylelintignore",
-        "lint:prettier": "prettier --ignore-path .prettierignore --check .",
+        "lint:js": "eslint --ext \".js,.ts,.jsx,.tsx,.vue\" .",
+        "lint:style": "stylelint \"**/*.{css,scss,sass,html,vue,less,postcss,pcss}\"",
+        "lint:prettier": "prettier --check .",
         "lint": "yarn lint:js && yarn lint:style && yarn lint:prettier",
-        "lintfix": "prettier --write --list-different . --ignore-path .prettierignore && yarn lint:js --fix && yarn lint:style --fix",
+        "lintfix": "prettier --write --list-different . && yarn lint:js --fix && yarn lint:style --fix",
         "lint:lint-staged": "lint-staged"
     },
     "devDependencies": {
@@ -41,13 +42,11 @@
         "postcss-color-gray": "5.0.0",
         "postcss-html": "^1.5.0",
         "prettier": "^3.0.0",
+        "sass": "^1.65.1",
         "stylelint": "^15.10.2",
         "stylelint-config-standard-vue": "^1.0.0",
         "stylelint-order": "^6.0.3",
         "typescript": "^5.1.6",
-        "unplugin-auto-import": "^0.16.6",
-        "unplugin-icons": "^0.16.5",
-        "unplugin-vue-components": "^0.25.1",
         "wrap-ansi": "8.0.1"
     },
     "keywords": [
